Add new header data for tables and fixed position

--- a/tester.html
+++ b/tester.html
@@ -108,10 +108,10 @@
                         <span class="const-section-bottom">
                             <div>
 
-                                <div class="chart-js-trial">
-                                    <canvas id="myChartdfing" style="background-color: rgb(241, 199, 247);"></canvas>
-                                </div>
 
+                                <div class="chart-js-trial">
+                                    <canvas id="myChartdfing" style="background-color: rgb(255, 255, 255);"></canvas>
+                                </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
@@ -143,12 +143,6 @@
                                             <td>1</td>
                                             <td>-</td>
                                         </tr>
-                                        <tr>
-                                            <td>Fine Gael</td>
-                                            <td>9,493</td>
-                                            <td>1</td>
-                                            <td>-</td>
-                                        </tr>
 
                                         <tr>
                                             <td>Fianna Fáil</td>
@@ -156,6 +150,14 @@
                                             <td>1</td>
                                             <td>-</td>
                                         </tr>
+                                        <tr>
+                                            <td>Fine Gael</td>
+                                            <td>9,493</td>
+                                            <td>1</td>
+                                            <td>-</td>
+                                        </tr>
+
+
                                         <tr>
                                             <td>Green Party</td>
                                             <td>8,400</td>
@@ -169,10 +171,10 @@
                                             <td>-</td>
                                         </tr>
                                         <tr>
-                                            <td>S-PBP</td>
-                                            <td>1,161</td>
+                                            <td>Ind4Change</td>
+                                            <td>2,529</td>
                                             <td>0</td>
-                                            <td>-</td>
+                                            <td>-1</td>
                                         </tr>
                                         <tr>
                                             <td>Soc Dems</td>
@@ -180,13 +182,13 @@
                                             <td>0</td>
                                             <td>0</td>
                                         </tr>
-
                                         <tr>
-                                            <td>Ind4Change</td>
-                                            <td>2,529</td>
+                                            <td>S-PBP</td>
+                                            <td>1,161</td>
                                             <td>0</td>
-                                            <td>-1</td>
+                                            <td>-</td>
                                         </tr>
+
                                         <tr>
                                             <td>Independents</td>
                                             <td>5,712</td>
@@ -220,7 +222,7 @@
                                     <img class="chart-img" src="/assets/img/DBNnew1.svg" alt="">
                                 </div> -->
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdbn" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdbn" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -324,7 +326,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdbs" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdbs" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <thead>
@@ -427,7 +429,7 @@
 
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdc" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdc" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
 
                                 <table class="const-table-2">
@@ -487,16 +489,16 @@
                                             <td>1</td>
                                             <td>+1</td>
                                         </tr>
-                                        <tr>
-                                            <td>S-PBP</td>
-                                            <td>977</td>
-                                            <td>0</td>
-                                            <td>-</td>
-                                        </tr>
 
                                         <tr>
                                             <td>Labour</td>
                                             <td>1,702</td>
+                                            <td>0</td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td>S-PBP</td>
+                                            <td>977</td>
                                             <td>0</td>
                                             <td>-</td>
                                         </tr>
@@ -533,7 +535,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdmw" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdmw" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -552,12 +554,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>19,463</td>
@@ -623,7 +627,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdnw" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdnw" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
 
                                 <table class="const-table-2">
@@ -641,12 +645,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>14,375</td>
@@ -719,7 +725,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdrd" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdrd" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -736,12 +742,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Fine Gael</td>
                                             <td>13,225</td>
@@ -812,7 +820,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdsc" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdsc" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
 
                                 <table class="const-table-2">
@@ -832,12 +840,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>17,015</td>
@@ -912,7 +922,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdsw" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdsw" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -934,12 +944,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>20,077</td>
@@ -1012,7 +1024,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdw" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdw" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -1031,12 +1043,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>12,456</td>
@@ -1114,7 +1128,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdl" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdl" style="background-color: rgb(255, 255, 255);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -1133,12 +1147,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Fine Gael</td>
                                             <td>20,828</td>
@@ -1669,6 +1685,7 @@
             }
         });
     </script>
+    <script src="tables.js"></script>
     <script src="script.js"></script>
     <script src="direct_map.js"></script>
 </body>
