--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>GE 2020 - Dublin</title>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
         integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
-    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js" type="text/javascript"></script>
-    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-cartesian.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.min.js"
+        integrity="sha512-BqNYFBAzGfZDnIWSAEGZSD/QFKeVxms2dIBPfw11gZubWwKUjEgmFUtUls8vZ6xTRZN/jaXGHD/ZaxD9+fDo0A=="
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -178,7 +179,7 @@
         l8.89,5.71l2.59,3.96l0.22,3.44l-4.48,4.33L430.91,668.13z" /></a>
 
                         <!-- DUBLIN SOUTH CENTRAL  -->
-                        <a xlink:title="Dublin South Central" xlink:href="tester.html#dubSouthCent">
+                        <a xlink:title="Dublin South Central" xlink:href="tester.html#dubSouthCent" target="_blank">
                             <path class="dubmidwest" d="M523.2,680.38l36.77,6.34l-0.26,16.81l-4.38,10.07l-0.38,7.54l-13.17-2.16l-6.23,7.22l-13.46,3.68l4.43,8.72
 		l5.16,5.18l-18.8,20.76l8.67,18.06l-5.03,5.21l-31.67-15.45l-18.74-23.38l-2.69,3.35l-11.15,5.71l-12.38,18.33l-14.71-9.05
 		l-12.7-19.64l-27.62-41.8l-2.2-7.1l0.36-8.28l4.97,1.77l5.25-3.91l14.91,2.02l2.18-5.84l9.57,2.16l1.78-3.45l3.13-13.86l4.41,1.84
@@ -215,7 +216,7 @@
 
                 <div class="bottom-text-leftbox">
                     <div class="left-side-text">
-                        <p> Constituencies 11/11</p>
+                        <p> Constituencies 11</p>
                     </div>
                     <div class="right-side-text">
                         <p>Eligible voting population 1,234,123</p>
@@ -246,61 +247,72 @@
                         <tbody>
                             <tr>
                                 <td>Sinn Fein</td>
-                                <td>150,000</td>
+                                <td>149,034</td>
                                 <td>10</td>
-                                <td>+7</td>
+                                <td>+2</td>
                             </tr>
                             <tr>
                                 <td>Fine Gael</td>
-                                <td>108,000</td>
+                                <td>110,505</td>
                                 <td>10</td>
-                                <td>-5</td>
-                            </tr>
-                            <tr>
-                                <td>Green Party</td>
-                                <td>85,000</td>
-                                <td>8</td>
-                                <td>+7</td>
+                                <td>-4</td>
                             </tr>
                             <tr>
                                 <td>Fianna Fáil</td>
-                                <td>69,000</td>
+                                <td>80411</td>
                                 <td>7</td>
-                                <td>+4</td>
+                                <td>+1</td>
+                            </tr>
+                            <tr>
+                                <td>Green Party</td>
+                                <td>62,675</td>
+                                <td>8</td>
+                                <td>+6</td>
                             </tr>
                             <tr>
                                 <td>S-PBP</td>
-                                <td>50,000</td>
+                                <td>36,424</td>
                                 <td>4</td>
                                 <td>-1</td>
                             </tr>
                             <tr>
-                                <td>Soc Dems</td>
-                                <td>42,000</td>
-                                <td>3</td>
-                                <td>+2</td>
-                            </tr>
-                            <tr>
                                 <td>Labour</td>
-                                <td>32,000</td>
+                                <td>33,834</td>
                                 <td>2</td>
                                 <td>-</td>
                             </tr>
                             <tr>
+                                <td>Soc Dems</td>
+                                <td>25,827</td>
+                                <td>3</td>
+                                <td>+2</td>
+                            </tr>
+
+                            <tr>
                                 <td>Ind4Change</td>
-                                <td>15,000</td>
+                                <td>5,360</td>
                                 <td>1</td>
-                                <td>-</td>
+                                <td>-1</td>
+                            </tr>
+                            <tr>
+                                <td>Ind/Other</td>
+                                <td>38,755</td>
+                                <td>0</td>
+                                <td>-5</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <!-- Bar Chart -->
 
-                <div>
+                <!-- <div>
 
                     <div class="chart-box" id="container"></div>
 
+                </div> -->
+
+                <div class="chart-js-trial-main">
+                    <canvas id="myChartmain" style="background-color: rgb(255, 255, 255);"></canvas>
                 </div>
 
 
@@ -581,50 +593,49 @@
 
 
     </div>
-    <script>
-        anychart.onDocumentReady(function () {
+    <!-- <script>
+        var ctx = document.getElementById('myChartmain').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ['SF', 'FG', 'FF', 'LAB', 'SD', 'GP', 'S-PBP', 'IND'],
+                datasets: [{
+                    label: 'Percent of First Preference Votes',
+                    data: [29.81, 18.76, 14.38, 11.35, 8.70, 7.04, 2.98, 5.61],
+                    backgroundColor: [
+                        'rgba(09, 53, 05, 1)',
+                        'rgba(06, 02, 197, 1)',
+                        'rgba(26, 151, 22, 1)',
+                        'rgba(255, 0, 0, 1)',
+                        'rgba(97, 1, 187, 1)',
+                        'rgba(83, 151, 77, 1)',
+                        'rgba(110, 46, 9, 1)',
+                        'rgba(128, 128, 128, 1)'
+                    ],
+                    borderColor: [
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
 
-            anychart.theme(anychart.themes.darkEarth);
-
-            // set the data
-            var data = {
-                header: ["Party", "Vote Share"],
-                rows: [
-                    ["Sinn Fein ", 100000, "##093505"],
-                    ["Fine Gael", 87000],
-                    ["Green Party", 90000],
-                    ["Fianna Fáil", 80000],
-                    ["Sol-PBP", 32000],
-                    ["Soc Dems ", 25000],
-                    ["Labour", 22000],
-                    ["Ind4Change", 20000],
-                    ["independents", 10000]
-
-                ]
-            };
-
-            // create the chart
-            var chart = anychart.bar();
-
-            // add the data
-            chart.data(data);
-
-            chart.pointWidth(20);
-
-            // set the chart title
-            chart.title("Percentage FPV GE 2020 - DUBLIN");
-            //Styling chart
-            chart.barsPadding(0);
-            var axisLabels = chart.xAxis().labels();
-            axisLabels.useHtml(true);
-            axisLabels.format("<b style='color:black;'>{%value}</b>");
-
-
-            // draw
-            chart.container("container");
-            chart.draw();
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
         });
-    </script>
+    </script> -->
+    <script src="tables.js"></script>
     <script src="script.js"></script>
     <script src="direct_map.js"></script>
 </body>
