Add new chart styles

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>GE 2020 - Dublin</title>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
         integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.min.js"
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.min.js"
         integrity="sha512-BqNYFBAzGfZDnIWSAEGZSD/QFKeVxms2dIBPfw11gZubWwKUjEgmFUtUls8vZ6xTRZN/jaXGHD/ZaxD9+fDo0A=="
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
+
+
+
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -312,7 +316,7 @@
                 </div> -->
 
                 <div class="chart-js-trial-main">
-                    <canvas id="myChartmain" style="background-color: rgb(255, 255, 255);"></canvas>
+                    <canvas id="myChartmain" style="background-color: rgb(255, 255, 255);" options="options"></canvas>
                 </div>
 
 
@@ -635,9 +639,16 @@
             }
         });
     </script> -->
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.js"
+        integrity="sha512-aWx9jeVTj8X49UzUnUHGIlo6rNne1xNsCny/lL0QwUTQK2eilrHXpSk9xbRm4FJ4eLi2XBmnFlRkWPoChSx8bA=="
+        crossorigin="anonymous"></script>
+
     <script src="tables.js"></script>
     <script src="script.js"></script>
     <script src="direct_map.js"></script>
+
 </body>
 
 </html>
