--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
         integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
 
-
+    <link rel="shortcut icon" href="assets/img/DVPfavicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 
