Fix button styles

--- a/tester.html
+++ b/tester.html
@@ -25,7 +25,7 @@
             </li>
             <li>
                 <form class="button-form" action="tester.html" method="get">
-                    <button class="btn-style nav-link active">TESTER<span class="sr-only"></span></button>
+                    <button class="btn-style nav-link active">BREAKDOWN<span class="sr-only"></span></button>
                 </form>
             </li>
         </ul>
